manifests-repo/tekton/ci-event-listener.yaml
# EventListener を外部からアクセス可能にする Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ci-event-listener
  namespace: <NAMESPACE>
spec:
  to:
    kind: Service
    name: el-ci-event-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
