manifests-repo/tekton/smoke-test-event-listener.yaml
# EventListener を外部からアクセス可能にする Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: smoke-test-event-listener
  namespace: <NAMESPACE>
spec:
  to:
    kind: Service
    name: el-smoke-test-event-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
